force-app/main/default/objects/Plant__c/Plant__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the plant details</description>
    <label>Plant</label>
    <nameField>
        <label>Plant Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>