force-app/main/default/objects/Plant__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for account lookup on plant.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plant</relationshipLabel>
    <relationshipName>Plant</relationshipName>
    <type>Lookup</type>
</CustomField>