force-app/main/default/objects/Plant__c/fields/API_Last_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Last_Executed_Date__c</fullName>
    <description>This field is used to store the date and time once the deliverable list, deliverable product and station list API executed.</description>
    <label>API Last Executed Date</label>
    <type>DateTime</type>
</CustomField>