force-app/main/default/objects/Plant__c/fields/Fax_number__c.field-meta.xml
<CustomField>
    <fullName>Fax_number__c</fullName>
    <label>Fax number</label>
    <type>Phone</type>
</CustomField>