force-app/main/default/objects/Plant__c/fields/Lang_Code__c.field-meta.xml
<CustomField>
    <fullName>Lang_Code__c</fullName>
    <defaultValue>&quot;EN&quot;</defaultValue>
    <description>This field is for storing the locale.</description>
    <label>Lang Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>