force-app/main/default/objects/Plant__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <description>This field is used to store the plant code.</description>
    <label>Plant Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>