force-app/main/default/objects/Plant__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <description>This field is use to store the plant name from API callout</description>
    <label>Plant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>