force-app/main/default/objects/Plant__c/listViews/All_Plants.listView-meta.xml
<ListView>
    <fullName>All_Plants</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Location__c</columns>
    <columns>Lang_Code__c</columns>
    <columns>Country__c</columns>
    <columns>Plant_Name__c</columns>
    <columns>API_Last_Executed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Plants</label>
</ListView>